# computer-use-mcp

./: .env.sample  .gitignore  CHANGELOG.md  LICENSE  PYPI_SETUP.md  README.md  browser_agent.py  pyproject.toml  server.py  task_manager.py  test_server.py
.claude/status_lines/: status_line_v2.py  status_line_v3.py  status_line_v4.py
.github/workflows/: publish.yml  test.yml
